--- a/public/footer.html
+++ b/public/footer.html
@@ -5,7 +5,7 @@
         <div class="col-6 col-lg-2 mb-3">
           <h5 class="lh-lg fw-bold text-1000">Company Info</h5>
           <ul class="list-unstyled mb-md-4 mb-lg-0">
-            <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">About Us</a></li>
+            <li class="lh-lg"><a class="text-800 text-decoration-none" href="about_us.php">About Us</a></li>
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Affiliate</a></li>
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Fashion Blogger</a></li>
           </ul>
