--- a/public/footer.html
+++ b/public/footer.html
@@ -8,6 +8,7 @@
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="about_us.php">About Us</a></li>
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Affiliate</a></li>
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Fashion Blogger</a></li>
+            <li class="lh-lg"><a class="text-800 text-decoration-none" href="terms_and_conditions.php">Terms And Conditions</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2 mb-3">
@@ -23,7 +24,7 @@
         <div class="col-6 col-lg-2 mb-3">
           <h5 class="lh-lg fw-bold text-1000">Customer Care</h5>
           <ul class="list-unstyled mb-md-4 mb-lg-0">
-            <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Contact Us</a></li>
+            <li class="lh-lg"><a class="text-800 text-decoration-none" href="contact_us.php">Contact Us</a></li>
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Payment Methods</a></li>
             <li class="lh-lg"><a class="text-800 text-decoration-none" href="#!">Bonus Point</a></li>
           </ul>
@@ -57,7 +58,7 @@
           <p class="my-2 text-1000 text-center text-md-start"> Made with&nbsp;
             <svg class="bi bi-suit-heart-fill" xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#EB6453" viewBox="0 0 16 16">
               <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"></path>
-            </svg>&nbsp;by&nbsp;<a class="text-800" href="https://themewagon.com/" target="_blank">ThemeWagon </a>
+            </svg>
           </p>
         </div>
         <div class="col-md-6">
