--- a/public/footer.html
+++ b/public/footer.html
@@ -20,10 +20,12 @@
         </div>
         <div class="text-center text-md-end">
           <div class="row gx-4">
-            <a class="col-3" href="#!"><span class="me-2" data-feather="facebook"></span></a>
-            <a class="col-3" href="#!"><span class="me-2" data-feather="instagram"></span></a>
-            <a class="col-3" href="#!"><span class="me-2" data-feather="youtube"></span></a>
-            <a class="col-3" href="#!"><span class="me-2" data-feather="twitter"></span></a>
+            <a class="col-3" href="https://www.facebook.com/" target="_blank"><span class="me-2" data-feather="facebook"></span></a>
+            <a class="col-3" href="https://www.instagram.com/" target="_blank"><span class="me-2" data-feather="instagram"></span></a>
+            <a class="col-3" href="https://www.youtube.com/" target="_blank"><span class="me-2" data-feather="youtube"></span></a>
+            <a class="col-3" href="https://twitter.com/" target="_blank"><svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+              <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+            </svg></span></a>
           </div>
         </div>
       </div>
